# my-college-files

./: .gitignore  .gitmodules  README.md  backup.sh  git_simple_encrypt.toml  test.typ  upload.sh  学习通爬取答案.py
信息科学与工程学院/机器学习（选修）/作业/: .gitignore  1.py  2.py  3.py  3.typ  pyproject.toml  readme.md
信息科学与工程学院/机器视觉实践/: .gitignore  README.md  pyproject.toml  shell.nix
信息科学与工程学院/机器视觉实践/src/: __init__.py  __main__.py
信息科学与工程学院/机器视觉实践/src/brightness/: __init__.py  index.html
信息科学与工程学院/机器视觉实践/src/merge/: __init__.py
信息科学与工程学院/机器视觉实践/src/mole/: __init__.py  inpaint.py  move_region.py
信息科学与工程学院/机器视觉实践/src/mosaic/: __init__.py
信息科学与工程学院/机器视觉实践/src/polyp/: __init__.py
信息科学与工程学院/机器视觉实践/src/scratch/: __init__.py  add_scratch.py  drawmask.py  drawmaskw.py  gause.py  myinpaint.py  sc_detect.py
信息科学与工程学院/机器视觉实践/src/split/: __init__.py
信息科学与工程学院/机器视觉实践/src/tooth/: index.html
信息科学与工程学院/机器视觉实践/src/utils/: __init__.py  convert.py  debug.py  draw_interface.py  http_server.py  noise.py  processing.py  shape.py  tk_image.py
信息科学与工程学院/机器视觉实践/src/watermark/: LSB.py  __init__.py  external.py  index.html  myfft.py
信息科学与工程学院/机器视觉实践/图像划痕处理/: README.md
信息科学与工程学院/机器视觉实践/图像划痕处理/src/: __main__.py  drawmask.py  drawmaskw.py
信息科学与工程学院/机器视觉实践/报告/: template.typ
信息科学与工程学院/机器视觉实践/报告/1/: 1.typ
信息科学与工程学院/算法导论/: 1.typ  3.typ  pyproject.toml  readme.md  哈希表.typ  图.typ  图的应用（大作业）.typ  排序.typ  树.typ  算法复杂度.typ
信息科学与工程学院/算法导论/code/: final-1.py  final-2.py  final-3.py  final-4.py  final-5.py  final-6.py  final-7.py  graph.py  pyproject.toml  sort-1.py  sort-2.js  sort-3.py
(+606 files in other folders)
