[tool.poetry]
name = "算法导论"
version = "0.1.0"
description = ""
authors = ["lxl66566 <lxl66566@gmail.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.8.2"
networkx = "^3.2.1"
pandas = "^2.1.4"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua-pypi"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "default"
