[tool.poetry]
name = "1"
version = "0.1.0"
description = ""
authors = ["lxl66566 <lxl66566@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.4.1.post1"

# 由于我的系统内自带一些包，因此无需重复安装
# 如果你的系统缺少这些包，请取消注释这些行：

# numpy = "^1.26.4"
# matplotlib = "^3.8.3"
# pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
